[package]
name = "crdt-enc-gpgme"
version = "0.1.0"
authors = ["Thomas Heck <t@b128.net>"]
edition = "2018"

[dependencies]
serde = "1"
serde_bytes = "0.11"
rmp-serde = "0.15"
async-trait = "0.1"
anyhow = "1"
uuid = "0.8"
crdts = "5"
gpgme = "0.9"
dyn-clone = "1"

[dependencies.crdt-enc]
path = "../crdt-enc"
