[package]
name = "crdt-enc-gpgme"
version = "0.1.0"
authors = ["Thomas Heck <t@b128.net>"]
edition = "2021"

[dependencies]
serde = "1"
serde_bytes = "0.11"
rmp-serde = "1"
async-trait = "0.1"
anyhow = "1"
uuid = "1"
crdts = "7"
gpgme = "0.11"
dyn-clone = "1"
phf = {version = "0.11", features = ["macros"]}

[dependencies.crdt-enc]
path = "../crdt-enc"
