[package]
name = "crdt-enc-tokio"
version = "0.1.0"
authors = ["Thomas Heck <t@b128.net>"]
edition = "2018"

[dependencies]
crdts = "4"
serde = "1"
async-trait = "0.1"
futures = "0.3"
anyhow = "1"
uuid = "0.8"
data-encoding = "2"
bytes = "0.5"

[dependencies.tiny-keccak]
version = "2"
features = ["sha3"]

[dependencies.tokio]
version = "0.2"
features = ["fs", "stream", "io-util"]

[dependencies.crdt-enc]
path = "../crdt-enc"
