[package]
name = "crdt-enc-tokio"
version = "0.1.0"
authors = ["Thomas Heck <t@b128.net>"]
edition = "2018"

[dependencies]
crdts = "5"
serde = "1"
async-trait = "0.1"
futures = "0.3"
anyhow = "1"
uuid = "0.8"
data-encoding = "2"
bytes = "1"

[dependencies.tiny-keccak]
version = "2"
features = ["sha3"]

[dependencies.tokio]
version = "1"
features = ["fs", "io-util"]

[dependencies.tokio-stream]
version = "0.1"
features = ["fs"]

[dependencies.crdt-enc]
path = "../crdt-enc"
