[package]
name = "crdt-enc-xchacha20poly1305"
version = "0.1.0"
authors = ["Thomas Heck <t@b128.net>"]
edition = "2018"

[dependencies]
crdts = "6.2"
rand = "0.8"
anyhow = "1"
serde = "1"
rmp-serde = "0.15"
serde_bytes = "0.11"
uuid = "0.8"
async-trait = "0.1"
agnostik = {git = "https://github.com/chpio/agnostik.git", branch = "tokio1"}

[dependencies.crdt-enc]
path = "../crdt-enc"

[dependencies.chacha20poly1305]
version = "0.7"
features = ["std"]
