[package]
name = "crdt-enc-xchacha20poly1305"
version = "0.1.0"
authors = ["Thomas Heck <t@b128.net>"]
edition = "2024"

[dependencies]
crdts = "7"
rand = { version = "0.10", features = ["thread_rng"] }
anyhow = "1"
serde = "1"
rmp-serde = "1"
serde_bytes = "0.11"
uuid = "1"
async-trait = "0.1"
agnostik = "0.2"

[dependencies.crdt-enc]
path = "../crdt-enc"

[dependencies.chacha20poly1305]
version = "0.10"
features = ["std"]
