[package]
name = "crdt-enc"
version = "0.1.0"
authors = ["Thomas Heck <t@b128.net>"]
edition = "2018"

[dependencies]
crdts = "4"
serde = "1"
serde_bytes = "0.11"
rmp-serde = "0.14"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
futures = "0.3"
dyn-clone = "1"
bytes = "0.5"

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]
