[package]
name = "crdt-enc"
version = "0.1.0"
authors = ["Thomas Heck <t@b128.net>"]
edition = "2018"

[dependencies]
crdts = "7"
serde = "1"
serde_bytes = "0.11"
rmp-serde = "1"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
futures = "0.3"
dyn-clone = "1"
bytes = "1"
phf = {version = "0.11", features = ["macros"]}

[dependencies.uuid]
version = "1"
features = ["serde", "v4"]
