[package]
name = "example-test"
version = "0.1.0"
authors = ["Thomas Heck <t@b128.net>"]
edition = "2018"

[dependencies]
crdt-enc = {path="../../crdt-enc"}
crdt-enc-tokio = {path="../../crdt-enc-tokio"}
crdt-enc-xchacha20poly1305 = {path="../../crdt-enc-xchacha20poly1305"}
crdt-enc-gpgme = {path="../../crdt-enc-gpgme"}
uuid = {version = "0.8", features = ["serde", "v4"]}
crdts = "6.2"
tokio = {version = "1", features = ["macros", "rt"]}
anyhow = "1"
futures = "0.3"
agnostik = {git = "https://github.com/chpio/agnostik.git", branch = "tokio1", features = ["runtime_tokio"]}
